[[example]]
name = "newest"
required-features = [ "tokio",]

[[example]]
name = "get_bug_log"
required-features = [ "tokio",]

[[example]]
name = "get_bugs"
required-features = [ "tokio",]

[[example]]
name = "get_usertag"
required-features = [ "tokio",]

[[example]]
name = "wnpp_bugs"
required-features = [ "tokio",]

[package]
name = "debbugs"
version = "0.1.5"
edition = "2021"
authors = [ "Jelmer Vernooĳ <jelmer@jelmer.uk>",]
repository = "https://github.com/jelmer/debbugs-rs"
description = "Debian Bugtracking System API client"
readme = "README.md"
license = "Apache-2.0"
documentation = "https://docs.rs/debbugs"
keywords = ["debian", "bugs", "api", "soap"]
categories = ["api-bindings", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lazy-regex = ">=2"
log = ">=0.4"
maplit = "1"
reqwest = ">=0.11"
xmltree = "0.11"
debversion = "0.4"

[features]
blocking = [ "reqwest/blocking",]
default = [ "blocking", "tokio", "mailparse",]
tokio = [ "dep:tokio",]
mailparse = [ "dep:mailparse",]

[dependencies.mailparse]
version = "0.16"
optional = true

[dependencies.env_logger]
version = ">=0.10.0"
optional = true

[dependencies.tokio]
version = "1"
optional = true
features = [ "full",]
